RESOLVED FIXED244382
ContentChangeObserver should use WeakHashSet instead of HashSet of raw pointers
https://bugs.webkit.org/show_bug.cgi?id=244382
Summary ContentChangeObserver should use WeakHashSet instead of HashSet of raw pointers
Ryosuke Niwa
Reported 2022-08-26 00:42:45 PDT
Don't use raw pointers.
Attachments
Ryosuke Niwa
Comment 1 2022-08-26 00:50:34 PDT
EWS
Comment 2 2022-08-26 12:49:34 PDT
Committed 253832@main (d3a456e71f07): <https://commits.webkit.org/253832@main> Reviewed commits have been landed. Closing PR #3697 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-26 12:50:18 PDT
Note You need to log in before you can comment on or make changes to this bug.