ContentChangeObserver should use WeakHashSet instead of HashSet of raw pointers https://bugs.webkit.org/show_bug.cgi?id=244382

Reviewed by Wenson Hsieh.

Use WeakHashSet instead of HashSet of raw pointers to DOMTimer and Element.

* Source/WebCore/page/DOMTimer.h:
(WebCore::DOMTimer): Make it possible to create a WeakPtr to DOMTimer.
* Source/WebCore/page/ios/ContentChangeObserver.cpp:
(WebCore::ContentChangeObserver::didAddTransition):
(WebCore::ContentChangeObserver::didFinishTransition):
(WebCore::ContentChangeObserver::didRemoveTransition):
(WebCore::ContentChangeObserver::registerDOMTimer): Moved from the header file.
(WebCore::ContentChangeObserver::unregisterDOMTimer): Ditto.
(WebCore::ContentChangeObserver::clearObservedDOMTimers): Ditto.
(WebCore::ContentChangeObserver::containsObservedDOMTimer const): Ditto.
(WebCore::ContentChangeObserver::hasObservedDOMTimer const): Ditto.
(WebCore::ContentChangeObserver::rendererWillBeDestroyed):

* Source/WebCore/page/ios/ContentChangeObserver.h:
(WebCore::ContentChangeObserver::hasObservedTransition const):
(WebCore::ContentChangeObserver::registerDOMTimer): Deleted.
(WebCore::ContentChangeObserver::unregisterDOMTimer): Deleted.
(WebCore::ContentChangeObserver::clearObservedDOMTimers): Deleted.
(WebCore::ContentChangeObserver::containsObservedDOMTimer const): Deleted.
(WebCore::ContentChangeObserver::hasObservedDOMTimer const): Deleted.
(WebCore::ContentChangeObserver::visibleRendererWasDestroyed const):

Canonical link: https://commits.webkit.org/253832@main